# spectrochempy

./: .buildinfo  .codeclimate.yml  .codespellrc  .coveragerc  .flake8  .gitattributes  .gitignore  .gitmodules  .lgtm.yml  .pre-commit-config.yaml  .pylintrc  .travis.yml  .zenodo.json  AGENTS.md  CHANGELOG  CHANGELOG.md  CITATION.cff  CNAME  CONTRIBUTING.md  Dockerfile  Fused%20Silica0004.DDR  Fused%20Silica0004.HDR  LICENCE-fr  LICENSE  MANIFEST.in  PHASE1_SUMMARY.md  PHASE3B_SUMMARY.md  PHASE3D_RENAME_SUMMARY.md  PR-draft-summary.md  README.md  README.rst  RELEASE_READINESS_REPORT.md  Untitled.ipynb  __setup__.py  bitbucket-docs.json  bitbucket-pipelines.yml  codecov.yml  conftest.py  env.yml  environment.yml  (+34 more)
.ci/: Dockerfile  conda-upload.sh  condarc.yml  create_requirements.py  env_create.py  env_t.yml  env_template.yml  env_templte.yml  generate_conda_recipe.py  generate_requirements.py  readme.md  set_env_var.sh  test_coverage.sh  update_version_and_changelog.py  update_version_and_release_notes.py
.conda/: meta.yaml  run_test.py  run_tests.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release_readme.md
.run/: pytest in test_utils.run.xml
0.10.0/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
0.10.1/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
0.10.2/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
0.11.0/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
plugins/plugin-template/: Makefile  README.md  pyproject.toml
plugins/plugin-template/.github/workflows/: publish_plugin.yml  test.yml
plugins/plugin-template/src/plugin_name/: __init__.py
plugins/plugin-template/tests/: test_plugin.py
plugins/spectrochempy-cantera/: Makefile  README.md  pyproject.toml  recipe.yaml
plugins/spectrochempy-cantera/.github/workflows/: test.yml
plugins/spectrochempy-cantera/examples/: gallery.toml
plugins/spectrochempy-cantera/examples/analysis/d_simulation/: plot_cantera_pfr.py  readme.rst
plugins/spectrochempy-cantera/src/spectrochempy_cantera/: __init__.py  _legacy.py  _pfr.py
plugins/spectrochempy-cantera/tests/: test_cantera.py
plugins/spectrochempy-carroucel/: pyproject.toml  recipe.yaml
plugins/spectrochempy-carroucel/src/spectrochempy_carroucel/: __init__.py  read_carroucell.py
plugins/spectrochempy-carroucel/tests/: test_carroucel.py
plugins/spectrochempy-carroucell/: README.md  pyproject.toml  recipe.yaml
plugins/spectrochempy-carroucell/src/spectrochempy_carroucell/: __init__.py  read_carroucell.py
plugins/spectrochempy-carroucell/tests/: test_carroucell.py
plugins/spectrochempy-hypercomplex/: README.md  pyproject.toml  recipe.yaml
plugins/spectrochempy-hypercomplex/src/spectrochempy_hypercomplex/: __init__.py  _quaternion.py
plugins/spectrochempy-hypercomplex/tests/: test_hypercomplex.py
plugins/spectrochempy-iris/: Makefile  README.md  pyproject.toml  recipe.yaml
plugins/spectrochempy-iris/.github/workflows/: test.yml
plugins/spectrochempy-iris/examples/: gallery.toml  plot_iris.py
plugins/spectrochempy-iris/examples/analysis/a_decomposition/: plot_iris_intro.py
plugins/spectrochempy-iris/src/spectrochempy_iris/: __init__.py  _core.py  _plotting.py
plugins/spectrochempy-iris/tests/: test_iris.py  test_iris_core.py  test_plot_lcurve.py  test_plot_merit.py  test_plotting_imports.py
plugins/spectrochempy-nmr/: NMRGLUE_LICENSE.rst  README.md  pyproject.toml  recipe.yaml
plugins/spectrochempy-nmr/.github/workflows/: test.yml
plugins/spectrochempy-nmr/examples/: gallery.toml
plugins/spectrochempy-nmr/examples/core/c_importer/: plot_read_nmr_from_bruker.py
plugins/spectrochempy-nmr/examples/processing/apodization/: plot_proc_em.py  plot_proc_sp.py  readme.rst
plugins/spectrochempy-nmr/examples/processing/nmr/: plot_processing_cp_nmr.py  plot_processing_nmr.py  plot_processing_nmr_2d.py  plot_processing_nmr_relax.py  plot_read_nmr_topspin.py  plot_validate_bruker_2d_against_pdata.py  plot_validate_bruker_2d_echo_antiecho_against_pdata.py  plot_validate_bruker_2d_magnitude_against_pdata.py  readme.rst
plugins/spectrochempy-nmr/src/spectrochempy_nmr/: __init__.py  experiment.py  fft_encodings.py  fft_postprocess.py  nmr_metadata.py  nmrglue.py  read_agilent.py  read_topspin.py  units.py
plugins/spectrochempy-nmr/src/spectrochempy_nmr/processing/: __init__.py  fft_encodings.py  fft_postprocess.py  hypercomplex.py  quaternion_phasing.py
plugins/spectrochempy-nmr/src/spectrochempy_nmr/readers/: __init__.py  read_agilent.py  read_jeol.py  read_simpson.py  read_tecmag.py  read_topspin.py
plugins/spectrochempy-nmr/tests/: test_experiment.py  test_fft_2d_characterization.py  test_fft_2d_validation.py  test_fft_encodings.py  test_nmr_plugin.py  test_nmr_smooth.py  test_nmr_units.py  test_plugin.py  test_read_agilent.py  test_read_jeol.py  test_read_simpson.py  test_read_tecmag.py  test_read_topspin.py  test_smooth.py  test_topspin_semantic_characterization.py  test_units.py
plugins/spectrochempy-perkinelmer/: README.md  pyproject.toml
plugins/spectrochempy-perkinelmer/examples/: gallery.toml  plot_read_perkinelmer.py
plugins/spectrochempy-perkinelmer/src/spectrochempy_perkinelmer/: __init__.py  read_perkinelmer.py
plugins/spectrochempy-perkinelmer/tests/: test_perkinelmer_plugin.py
plugins/spectrochempy-perkinelmer/tests/data/: spectra.sp
plugins/spectrochempy-tensor/: README.md  pyproject.toml  recipe.yaml
plugins/spectrochempy-tensor/src/spectrochempy_tensor/: __init__.py
plugins/spectrochempy-tensor/src/spectrochempy_tensor/adapters/: __init__.py
plugins/spectrochempy-tensor/src/spectrochempy_tensor/decompositions/: __init__.py  cp.py
plugins/spectrochempy-tensor/tests/: test_tensor_cp.py  test_tensor_plugin.py
plugins/spectrochempy-topspin/: README.md  pyproject.toml
plugins/spectrochempy-topspin/src/spectrochempy_topspin/: __init__.py  nmrglue.py
plugins/spectrochempy-topspin/tests/: test_plugin.py  test_read_topspin.py  test_smooth.py
(+9658 files in other folders)
