[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectrochempy"
description = "Processing, analysis and modelling Spectroscopic data for Chemistry with Python"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.10"
license = { text = "CeCILL-B FREE SOFTWARE LICENSE AGREEMENT" }
authors = [
  { name = "Arnaud Travert", email = "contact@spectrochempy.fr" },
  { name = "Christian Fernandez", email = "christian.fernandez@ensicaen.fr" },
]
keywords = ["spectroscopy", "chemistry", "data analysis"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Topic :: Utilities",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries",
  "Intended Audience :: Science/Research",
  "License :: CeCILL-B Free Software License Agreement (CECILL-B)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "ipython>=8.17.2; python_version >= '3.13'",   # Required for 3.13
  "ipython; python_version < '3.13'",   # satisfied for colab
  "jinja2>=3.1.2",              # Compatible with 3.13
  "numpy>=2.1.0",              # Required for 3.13
  "brukeropusreader>=1.3.4",    # No specific 3.13 requirement yet
  "colorama>=0.4.6",            # Compatible with 3.13
  "dill>=0.3.7",                # Needed for 3.13
  "docrep==0.3.2",              # No specific 3.13 requirement yet
  "numpy-quaternion>=2024.0.3", # Latest for 3.13
  "matplotlib>=3.9.2",          # Required for 3.13
  "osqp>=0.6.3",                # No specific 3.13 requirement yet
  "pint>=0.24.4",                 # Compatible with 3.13
  "pyyaml>=6.0.1",              # Compatible with 3.13
  "requests>=2.31.0",           # Compatible with 3.13
  "scikit-learn>=1.5.2",          # Required for 3.13
  "scipy>=1.14.1",              # Required for 3.13
  "setuptools-scm>=8.0.1",      # Current requirement
  "tzlocal",               # For 3.13 support
  "xlrd>",                # Compatible with 3.13
]

[project.optional-dependencies]
dev = [
  # various
  "toml>=0.10.2",
  "ruff>=0.2.0",
  "pre-commit>=3.6.0",
  # interactive
  "jupyter>=1.0.0",
  "jupyterlab>=4.3.4",         # Required for 3.13
  "ipykernel>=6.29.0",         # Required for 3.13
  "ipyparallel>=8.6.1",        # Required for 3.13
  "nodejs>=0.1.1",
  "jupyter_server>=2.12.0",     # Required for 3.13
  # test
  "coverage>=7.4.0",           # Latest for 3.13
  "ipywidgets>=8.1.1",         # Required for 3.13
  "pyfakefs>=5.3.2",           # Compatible with 3.13
  "pytest>=8.0.0",             # Latest for 3.13
  "pytest-cov>=4.1.0",
  "pytest-doctestplus>=1.2.0",
  "pytest-ruff>=0.2.1",
  "pytest-mock>=3.12.0",
  "numpydoc>=1.6.0",             # Required for 3.13
]
interactive = [
  "jupyter>=1.0.0",
  "jupyterlab>=4.3.4",         # Required for 3.13
  "ipykernel>=6.29.0",         # Required for 3.13
  "ipyparallel>=8.6.1",        # Required for 3.13
  "nodejs>=0.1.1",
  "jupyter_server>=2.12.0",     # Required for 3.13
]
test = [
  "coverage>=7.4.0",           # Latest for 3.13
  "ipywidgets>=8.1.1",         # Required for 3.13
  "pyfakefs>=5.3.2",           # Compatible with 3.13
  "pytest>=8.0.0",             # Latest for 3.13
  "pytest-cov>=4.1.0",
  "pytest-doctestplus>=1.2.0",
  "pytest-ruff>=0.2.1",
  "pytest-mock>=3.12.0",
  "numpydoc>=1.6.0",
]
docs = [
  #"cffconvert @ git+https://github.com/citation-file-format/cffconvert@b6045d7",
  "ipywidgets>=8.1.1",         # Required for 3.13
  "jupytext>=1.16.1",          # Latest for 3.13
  "nbsphinx>=0.9.3",           # Compatible with 3.13
  "numpydoc>=1.6.0",           # Latest for 3.13
  "pypandoc>=1.13",            # Latest for 3.13
  "sphinx>=7.2.6",             # Latest for 3.13
  "sphinx-copybutton>=0.5.2",  # Latest for 3.13
  "sphinx-gallery>=0.15.0",    # Latest for 3.13
  "sphinx-rtd-theme>=2.0.0",   # Latest for 3.13
  "sphinxcontrib-bibtex>=2.6.1", # Latest for 3.13
  "json5>=0.9.14",             # Latest for 3.13
]
build = [
  "setuptools>=64",
  "setuptools_scm>=8",
  "toml",
  "jinja2",
  "anaconda-client",
]
cantera = ["cantera"]
[project.urls]
homepage = "https://www.spectrochempy.fr"
repository = "https://github.com/spectrochempy/spectrochempy"
documentation = "https://www.spectrochempy.fr/latest"
issues = "https://github.com/spectrochempy/spectrochempy/issues"

[project.scripts]
show-versions = "spectrochempy.scripts.show_versions:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"spectrochempy.data" = [
  "fonts/*",
  "stylesheets/*",
  "databases/*",
  "*.json",
  "*.cff",
]

[tool.setuptools_scm]
local_scheme = "dirty-tag"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# Enable specific rules
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "S",   # bandit
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "T20", # flake8-print
  "RET", # flake8-return
  "SIM", # flake8-simplify
  "W",   # pycodestyle warnings
  # "PERF", # perflint
  "PLC", # pylint conventions
]
ignore = [
  "E402", # Module level import not at top of file
  "E501", # Line too long
  "E731", # Do not assign a lambda expression
  "N801", # Class name should use CapWords convention
  "N802", # Function name should be lowercase
  "N803", # Argument name should be lowercase
  "N805", # First argument of a method should be named 'self'
  "N806", # Variable in function should be lowercase
]

exclude = [
  "~*",
  "tests/**",
] # Exclude files and directories.

[tool.ruff.lint.per-file-ignores]
"docs/userguide/**/*" = ["B018", "T201", "N816"]   # accept "useless expression", "print", "mixed-case variables" in *.ipynb or py:percent files.
"docs/gettingstarted/*" = ["B018"]  # accept "useless expression" in *.ipynb or py:percent files.


[tool.ruff.lint.isort]
known-first-party = ["spectrochempy"]
force-single-line = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
