[aliases]
test = pytest

[metadata]
name = spectrochempy
author = Arnaud Travert, Christian Fernandez
author_email = contact@spectrochempy.fr
url = https://www.spectrochempy.fr
summary = Processing, analysis and modelling Spectroscopic data for Chemistry with Python
long_description = file: README.md
long_description_content_type = text/markdown
license = CeCILL-B Free Software
platforms = Windows, Mac OS X, Linux
classifiers =
    Development Status :: 3 - Alpha
    Topic :: Utilities
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries
    Intended Audience :: Science/Research
    License :: CeCILL-B Free Software License Agreement (CECILL-B)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
python_requires = >=3.6
setup_requires = setuptools_scm

[options.package_data]
* = *.txt, *.md
LICENSE = LICENSE

[options.extras_require]

[options.packages.find]
exclude =

[options.data_files]



[flake8]
max-doc-length = 120
max-line-length = 120
# exclude test, and some other folder for now (may be done later)
exclude =
    #tests/
    docs/
    spectrochempy/extern/
    sphinxext
    *.ipynb_checkpoints/
    # tempo (no nmr and pb with project and fileselector)
    phasing.py
    fft.py
    project.py
    fileselector.py
    */nmr/

[tool:pytest]
testpaths = tests
norecursedirs = .git docs scripts sphinxext *checkpoints extern build dist conda
addopts =
    --verbose
    -W ignore::DeprecationWarning
    --ignore=extern/
    --ignore=gui/
    --doctest-modules
    --tb=short
    --doctest-glob=''
doctest_plus = enabled
doctest_optionflags = ELLIPSIS NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ALLOW_UNICODE ALLOW_BYTES
doctest_encoding = utf-8

flake8-max-doc-length = 120
flake8-max-line-length = 120
flake8-ignore = E402 E126 E123
#                test_*.py ALL