;[aliases]
;test = pytest
;
;[metadata]
;name = spectrochempy
;author = Arnaud Travert, Christian Fernandez
;author_email = contact@spectrochempy.fr
;url = https://www.spectrochempy.fr
;summary = Processing, analysis and modelling Spectroscopic data for Chemistry with Python
;long_description = file: README.md
;long_description_content_type = text/markdown
;license = CeCILL-B Free Software
;platforms = Windows, Mac OS X, Linux
;classifiers =
;    Development Status :: 3 - Alpha
;    Topic :: Utilities
;    Topic :: Scientific/Engineering
;    Topic :: Software Development :: Libraries
;    Intended Audience :: Science/Research
;    License :: CeCILL-B Free Software License Agreement (CECILL-B)
;    Operating System :: OS Independent
;    Programming Language :: Python :: 3.6
;    Programming Language :: Python :: 3.7
;    Programming Language :: Python :: 3.8
;
;[options]
;zip_safe = False
;include_package_data = True
;packages = find:
;install_requires =
;python_requires = >=3.6
;setup_requires = setuptools_scm matplotlib
;
;[options.entry_points]
;console_scripts =
;    scpy_gui=spectrochempy.gui.scpy_gui:main
;    scpy_update=spectrochempy.scripts.scpy_update:main
;[options.package_data]
;* = *.txt, *.md
;LICENSE = LICENSE
;
;[options.extras_require]
;
;[options.packages.find]
;exclude =
;
;[options.data_files]
