[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = >=3.10
setup_requires =
    setuptools_scm>=6.3.2
    matplotlib>=3.5.1
install_requires =
    numpy>=2.0.0
    matplotlib>=3.5.1
    # Add other dependencies here

[options.extras_require]
dev =
    pytest
    flake8
    black
    isort
    # Add other development dependencies here

[flake8]
ignore =
    E203,
    E402,
    E501,
    E703,
    E731,
    E902,
    F405,
    W503,
    W504,
    W605,
    N801,
    N802,
    N803,
    N805,
    N806,
    N812,
    N815,
    N816
rst-roles =
    class,
    meth,
    func,
    ref,
    term,
    attr,
    const,
    cite:t
rst-directives =
    plot
per-file-ignores =
    docs/**/*.py:E501
max-line-length = 88
max-complexity = 100
select =
    C,
    E,
    F,
    W
count = True
statistics = True
exclude =
    .idea
    .eggs
    build
    ~*
    docs/sphinxext
    *.ipynb_checkpoints

[tool:pytest]
testpaths = tests
addopts =
    --ignore="~*"
    --doctest-plus
    -p no:warnings
doctest_plus = enabled
doctest_optionflags =
    ELLIPSIS
    NORMALIZE_WHITESPACE
    IGNORE_EXCEPTION_DETAIL
    ALLOW_UNICODE
    ALLOW_BYTES

[coverage:run]
source = spectrochempy/

[coverage:report]
exclude_lines =
    pragma: no cover
    '# '
    if self.debug:
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:
    def __repr__
    if settings.DEBUG
ignore_errors = true
omit =
    */.ci/**/*
    */tests/**/
    */docs/**/*
    */build/**/*
    */.eggs/**/*
    */scripts/**/*
    */scp_data/**/*
    */~sandbox/**/*
    */~tools/**/*
    */spectrochempy/extern/**/*
