[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "spectrochempy-myplugin"
dynamic = ["version"]
description = "A SpectroChemPy plugin"
requires-python = ">=3.11"
dependencies = [
    "spectrochempy>=0.8,<0.10",
]

[project.entry-points."spectrochempy.plugins"]
myplugin = "plugin_name:MyPlugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools_scm]
fallback_version = "0.1.0"
