[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "spectrochempy-myplugin"
version = "0.1.0"
description = "A SpectroChemPy plugin"
requires-python = ">=3.11"
# Official plugins (published by the SpectroChemPy team) must also list:
#   "Framework :: SpectroChemPy :: Official Plugin"
# in the classifiers below.  Adding this classifier is the only registration
# step needed for all CI workflows to auto-discover the plugin.
classifiers = [
]
dependencies = [
    "spectrochempy>=0.9,<0.11",
]

[project.entry-points."spectrochempy.plugins"]
myplugin = "plugin_name:MyPlugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
