[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "spectrochempy-myplugin"
version = "0.1.0"
description = "A SpectroChemPy plugin"
requires-python = ">=3.11"
# Official plugins (published by the SpectroChemPy team) must also add
# the following section:
#
#   [tool.spectrochempy]
#   official-plugin = true
#
# This marker is the registration point for all CI workflows (publishing,
# testing, docs builds, release validation).  Do NOT use a Trove classifier
# for this — PyPI only accepts registered Trove classifiers.
classifiers = [
]
dependencies = [
    "spectrochempy>=0.9,<0.12",
]

# Uncomment and adjust when scaffolding a new plugin:
# [project.entry-points."spectrochempy.plugins"]
# myplugin = "plugin_name:MyPlugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
