[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "spectrochempy-cantera"
dynamic = ["version"]
description = "Cantera-based thermodynamics and reactive chemistry for SpectroChemPy"
requires-python = ">=3.11"
dependencies = [
    "spectrochempy>=0.8,<0.10",
    "cantera>=3.0",
    "numpy",
    "scipy",
]

[project.entry-points."spectrochempy.plugins"]
cantera = "spectrochempy_cantera:CanteraPlugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: tests requiring network access",
]

[tool.setuptools_scm]
fallback_version = "0.1.0"
