[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "spectrochempy-carroucell"
version = "0.1.0"
description = "Carroucell experiment reader for SpectroChemPy"
requires-python = ">=3.11"
dependencies = [
    "spectrochempy>=0.9.0.dev0,<0.10",
    "xlrd",
    "scipy",
]

[project.entry-points."spectrochempy.plugins"]
carroucell = "spectrochempy_carroucell:CarroucellPlugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
