[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "spectrochempy-carroucell"
version = "0.1.4"
description = "Carroucell experiment reader for SpectroChemPy"
requires-python = ">=3.11"
readme = "README.md"
classifiers = [
    "Framework :: SpectroChemPy :: Official Plugin",
]
dependencies = [
    "spectrochempy>=0.10,<0.11",
    "xlrd",
    "scipy",
]

[project.entry-points."spectrochempy.plugins"]
carroucell = "spectrochempy_carroucell:CarroucellPlugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
