[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "spectrochempy-hypercomplex"
version = "0.1.5"
description = "Hypercomplex / quaternion support plugin for SpectroChemPy"
requires-python = ">=3.11"
readme = "README.md"
classifiers = [
    "Framework :: SpectroChemPy :: Official Plugin",
]
dependencies = [
    "spectrochempy>=0.10,<0.11",
    "numpy",
    "numpy-quaternion>=2024.0.7",
]

[project.entry-points."spectrochempy.plugins"]
hypercomplex = "spectrochempy_hypercomplex:HyperComplexPlugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
