[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "spectrochempy-nmr"
dynamic = ["version"]
description = "NMR readers and tools plugin for SpectroChemPy"
requires-python = ">=3.11"
dependencies = [
    "spectrochempy>=0.8,<0.10",
    "numpy",
    # nmrglue is intentionally vendored/adapted in spectrochempy_nmr.nmrglue.
]

[project.optional-dependencies]
hypercomplex = ["spectrochempy-hypercomplex>=0.1.0"]

[project.entry-points."spectrochempy.plugins"]
nmr = "spectrochempy_nmr:NMRPlugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools_scm]
fallback_version = "0.1.0"
