[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "spectrochempy-nmr"
version = "0.1.2"
description = "NMR readers and tools plugin for SpectroChemPy"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "spectrochempy>=0.9,<0.10",
    "numpy",
    # nmrglue is intentionally vendored/adapted in spectrochempy_nmr.nmrglue.
]

[project.optional-dependencies]
hypercomplex = ["spectrochempy-hypercomplex>=0.1.0"]

[project.entry-points."spectrochempy.plugins"]
nmr = "spectrochempy_nmr:NMRPlugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
