[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "spectrochempy-nmr"
version = "0.1.6"
description = "NMR readers and tools plugin for SpectroChemPy"
requires-python = ">=3.11"
readme = "README.md"
classifiers = [
    "Framework :: SpectroChemPy :: Official Plugin",
]
dependencies = [
    "spectrochempy>=0.10,<0.11",
    "numpy",
    # nmrglue is intentionally vendored/adapted in spectrochempy_nmr.nmrglue.
]

[project.optional-dependencies]
hypercomplex = ["spectrochempy-hypercomplex>=0.1.0"]

[project.entry-points."spectrochempy.plugins"]
nmr = "spectrochempy_nmr:NMRPlugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
