[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "spectrochempy-perkinelmer"
version = "0.1.3"
description = "PerkinElmer file reader plugin for SpectroChemPy"
requires-python = ">=3.11"
readme = "README.md"
classifiers = [
]
dependencies = [
    "spectrochempy>=0.10,<0.12",
    "numpy",
]

[project.entry-points."spectrochempy.plugins"]
perkinelmer = "spectrochempy_perkinelmer:PerkinElmerPlugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.spectrochempy]
official-plugin = true
