[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "spectrochempy-tensor"
version = "0.1.3"
description = "Tensor decompositions plugin for SpectroChemPy"
requires-python = ">=3.11"
readme = "README.md"
classifiers = [
]
dependencies = [
    "spectrochempy>=0.10,<0.12",
    "tensorly",
]

[project.entry-points."spectrochempy.plugins"]
tensor = "spectrochempy_tensor:TensorPlugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.spectrochempy]
official-plugin = true
